# liza

./: .pre-commit-config.yaml  AGENTS.md  README.md  REPOSITORY.md  mypy.ini  pyproject.toml
contracts/: AGENT_TOOLS.md  COLLABORATION_CONTINUITY.md  CONTRACT_FAILURE_MODE_MAP.md  CONTRACT_FOR_PAIRING_AGENTS_v3.md  CORE.md  LOADER.md  MULTI_AGENT_MODE.md  PAIRING_MODE.md  README.md  contract-activation.md
docs/: DEMO.md  Liza-foundation.md  TROUBLESHOOTING.md  USAGE.md
docs/demo-benchmark/: claude-demo-trace.md  codex-demo-trace.md  demo-comparison.md  gemini-demo-trace.md  hello-protocol.md  kimi-demo-trace.md  mistral-demo-trace.md  wrap-up.md
docs/for-agent-eyes/: agent-runtime-reference.md
docs/release_notes/: RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md
scripts/: liza-add-task.sh  liza-agent.sh  liza-claim-task.sh  liza-common.sh  liza-handoff.sh  liza-init.sh  liza-lock.sh  liza-prompt-builders.sh  liza-submit-for-review.sh  liza-submit-verdict.sh  liza-validate.sh  liza-watch.sh  wt-create.sh  wt-merge.sh
skills/adr-backfill/: SKILL.md
skills/code-cleaning/: SKILL.md
skills/code-review/: SKILL.md
skills/debugging/: SKILL.md
skills/generic-subagent/: SKILL.md
skills/software-architecture-review/: SKILL.md
skills/spec-backfill/: SKILL.md
skills/spec-review/: SKILL.md
skills/systemic-thinking/: SKILL.md
skills/testing/: SKILL.md
specs/: README.md  vision.md
specs/_archive/: vision.md
specs/architecture/: blackboard-schema.md  overview.md  roles.md  state-machines.md
templates/: README.md  vision-template.md
(+27 files in other folders)
